General:   - fixed body scrolling on small screens; Social:   - Added friendly welcome heading API:   - Changed tag and genre handling (only id) Channels:   - Added getByGenre, getByTag and getFavourite   - Default channel order is the same as backend Menu:   - Root menu working and scrolling Player:   - Added hls.js support, commented out

--- a/css/global.css
+++ b/css/global.css
@@ -4,6 +4,7 @@ body {
     background: #000;
     font-family: "roboto_condensedregular", sans-serif;
     color: #fff;
+    overflow: hidden;
 }
 
 video, #player {
